--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -2,6 +2,12 @@
   "@_0__left": {
     "message": "$${0} 남음"
   },
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "$${0} will be trusted on this website."
+  },
+  "@_1__will_be_blocked_on_this_website_": {
+    "message": "$${1} will be blocked on this website."
+  },
   "1_day": {
     "message": "1일"
   },
@@ -17,8 +23,17 @@
   "ad_blocking": {
     "message": "광고 차단"
   },
-  "additional_permissions_required": {
-    "message": "추가 권한 필요"
+  "add": {
+    "message": "Add"
+  },
+  "add_@_0__as_exception": {
+    "message": "Add $${0} as exception"
+  },
+  "add_website_exception": {
+    "message": "Add website exception"
+  },
+  "adjusted": {
+    "message": "adjusted"
   },
   "adult_advertising": {
     "message": "성인 광고 ",
@@ -56,8 +71,29 @@
   "become_a_contributor": {
     "message": "기부자가 되세요."
   },
+  "block_all__recommend_": {
+    "message": "Block all (recommend)"
+  },
+  "block_on_this_website": {
+    "message": "Block on this website"
+  },
+  "blocked": {
+    "message": "Blocked"
+  },
+  "blocked__@_0_": {
+    "message": "Blocked: $${0}"
+  },
+  "blocked_on_all_websites": {
+    "message": "Blocked on all websites"
+  },
+  "blocked_on_this_website": {
+    "message": "Blocked on this website"
+  },
   "cancel": {
     "message": "취소 "
+  },
+  "category": {
+    "message": "Category"
   },
   "cdn": {
     "message": "CDN",
@@ -68,6 +104,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "검색 바 옆 퍼즐 아이콘을 클릭하면 Ghostery가 툴바에 고정됩니다."
+  },
+  "collapse": {
+    "message": "Collapse"
   },
   "comments": {
     "message": "댓글",
@@ -89,8 +128,14 @@
   "copied_to_clipboard": {
     "message": "클립보드에 복사됨"
   },
+  "country": {
+    "message": "Country"
+  },
   "create_account": {
     "message": "계정 만들기 "
+  },
+  "current_protection_status_for_@_0__": {
+    "message": "Current protection status for $${0}:"
   },
   "customer_interaction": {
     "message": "고객 응대 ",
@@ -158,12 +203,18 @@
     "message": "필수 ",
     "description": "Tracker category name"
   },
+  "expand": {
+    "message": "Expand"
+  },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "간단히 몇 단계만 거치면 검색 엔진에까지 Ghostery 광고 차단을 확대 적용할 수 있습니다."
   },
   "extensions": {
     "message": "확장",
     "description": "Tracker category name"
+  },
+  "for_all_websites": {
+    "message": "For all websites"
   },
   "for_more_information_read_our_full": {
     "message": "자세한 정보는 전문을 읽으시기 바랍니다"
@@ -274,6 +325,9 @@
   "learn_more_about_youtube_s_challenges_to_ad_blockers": {
     "message": "광고 차단기에 대한 YouTube의 도전에 대해 자세히 알아보기"
   },
+  "load_more": {
+    "message": "Load more"
+  },
   "manifest_name": {
     "message": "고스터리 트래커 및 광고 차단기 - 프라이버시 AdBlock"
   },
@@ -290,8 +344,14 @@
     "message": "기타",
     "description": "Tracker category name"
   },
+  "modify_the_recommended_blocking_settings_for_every_website_": {
+    "message": "Modify the recommended blocking settings for every website."
+  },
   "more_ad_blocking_available": {
     "message": "더 많은 광고 차단 가능"
+  },
+  "more_in_this_organization": {
+    "message": "More in this organization"
   },
   "my_account": {
     "message": "내 계정 "
@@ -302,14 +362,20 @@
   "never_consent": {
     "message": "동의하지 않음"
   },
-  "no_trackers_detected": {
-    "message": "트래커 감지되지 않음"
+  "no_activities_detected": {
+    "message": "No activities detected"
+  },
+  "no_websites_exceptions_added_yet": {
+    "message": "No websites exceptions added yet"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "네트워크 요청이 차단된 트래커의 수."
   },
   "number_of_trackers_with_removed_cookies_or_fingerprints_": {
     "message": "쿠키 및 지문이 제거된 트래커의 수."
+  },
+  "observed_activities": {
+    "message": "Observed activities"
   },
   "off": {
     "message": "끄기 "
@@ -323,9 +389,21 @@
   "open_youtube_in_a_private_window": {
     "message": "비공개 창에서 YouTube 열기"
   },
+  "organization": {
+    "message": "Organization"
+  },
+  "organization_s_website": {
+    "message": "Organization's website"
+  },
   "other": {
     "message": "기타",
     "description": "Tracker category name"
+  },
+  "our_recommendation_for_this_activity__blocked": {
+    "message": "Our recommendation for this activity: Blocked"
+  },
+  "our_recommendation_for_this_activity__trusted": {
+    "message": "Our recommendation for this activity: Trusted"
   },
   "pause_on_this_site": {
     "message": "이 사이트에서 일시 중지"
@@ -357,6 +435,9 @@
   "privacy_protection": {
     "message": "개인정보 보호"
   },
+  "protection_status": {
+    "message": "Protection status"
+  },
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Me 자세히 보기"
   },
@@ -375,6 +456,9 @@
   "resume": {
     "message": "다시 시작 "
   },
+  "save": {
+    "message": "Save"
+  },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "맞춤 설정을 저장하여 여러 브라우저 및 장치 간에 동기화합니다."
   },
@@ -384,6 +468,9 @@
   "search_website___": {
     "message": "웹사이트 검색..."
   },
+  "set_blocking_preference": {
+    "message": "Set blocking preference"
+  },
   "settings": {
     "message": "설정 "
   },
@@ -392,6 +479,9 @@
   },
   "setup_successful": {
     "message": "셋업 성공"
+  },
+  "show_all": {
+    "message": "Show all"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "검색결과 옆에 트래커 미리보기를 표시합니다."
@@ -426,14 +516,17 @@
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
   },
+  "tracker_database": {
+    "message": "Tracker database"
+  },
+  "trackers": {
+    "message": "Trackers"
+  },
   "trackers_blocked": {
     "message": "차단된 트래커"
   },
   "trackers_count": {
     "message": "트래커 카운트"
-  },
-  "trackers_detected": {
-    "message": "트래커 감지됨"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "이 웹사이트에서 Ghostery가 탐지한 추적기:&nbsp;$${0}"
@@ -446,6 +539,21 @@
   },
   "trackers_wheel": {
     "message": "트래커 휠"
+  },
+  "trust_on_this_website": {
+    "message": "Trust on this website"
+  },
+  "trusted": {
+    "message": "Trusted"
+  },
+  "trusted__@_0_": {
+    "message": "Trusted: $${0}"
+  },
+  "trusted_on_all_websites": {
+    "message": "Trusted on all websites"
+  },
+  "trusted_on_this_website": {
+    "message": "Trusted on this website"
   },
   "unidentified": {
     "message": "알 수 없음",
@@ -460,6 +568,12 @@
   "urls_observed": {
     "message": "관찰된 URL"
   },
+  "view_activity_details": {
+    "message": "View activity details"
+  },
+  "view_trackerdb_on_github": {
+    "message": "View trackerdb on GitHub"
+  },
   "visit_our_blog": {
     "message": "블로그 방문하기"
   },
@@ -471,6 +585,9 @@
   },
   "website": {
     "message": "웹사이트"
+  },
+  "website_exceptions": {
+    "message": "Website exceptions"
   },
   "websites": {
     "message": "웹사이트"
