--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -2,6 +2,12 @@
   "@_0__left": {
     "message": "$${0} restante(s)"
   },
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "$${0} will be trusted on this website."
+  },
+  "@_1__will_be_blocked_on_this_website_": {
+    "message": "$${1} will be blocked on this website."
+  },
   "1_day": {
     "message": "1 dia"
   },
@@ -17,8 +23,17 @@
   "ad_blocking": {
     "message": "Bloqueio de anúncios"
   },
-  "additional_permissions_required": {
-    "message": "Permissões adicionais necessárias"
+  "add": {
+    "message": "Add"
+  },
+  "add_@_0__as_exception": {
+    "message": "Add $${0} as exception"
+  },
+  "add_website_exception": {
+    "message": "Add website exception"
+  },
+  "adjusted": {
+    "message": "adjusted"
   },
   "adult_advertising": {
     "message": "Anúncios adultos",
@@ -56,8 +71,29 @@
   "become_a_contributor": {
     "message": "Seja um colaborador"
   },
+  "block_all__recommend_": {
+    "message": "Block all (recommend)"
+  },
+  "block_on_this_website": {
+    "message": "Block on this website"
+  },
+  "blocked": {
+    "message": "Blocked"
+  },
+  "blocked__@_0_": {
+    "message": "Blocked: $${0}"
+  },
+  "blocked_on_all_websites": {
+    "message": "Blocked on all websites"
+  },
+  "blocked_on_this_website": {
+    "message": "Blocked on this website"
+  },
   "cancel": {
     "message": "Cancelar"
+  },
+  "category": {
+    "message": "Category"
   },
   "cdn": {
     "message": "CDN",
@@ -68,6 +104,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Clique no ícone do quebra-cabeça ao lado da barra de pesquisa e fixe o Ghostery na sua barra de ferramentas."
+  },
+  "collapse": {
+    "message": "Collapse"
   },
   "comments": {
     "message": "Comentários",
@@ -89,8 +128,14 @@
   "copied_to_clipboard": {
     "message": "Copiado para a área de transferência"
   },
+  "country": {
+    "message": "Country"
+  },
   "create_account": {
     "message": "Criar conta"
+  },
+  "current_protection_status_for_@_0__": {
+    "message": "Current protection status for $${0}:"
   },
   "customer_interaction": {
     "message": "Interação com o cliente",
@@ -158,12 +203,18 @@
     "message": "Essencial",
     "description": "Tracker category name"
   },
+  "expand": {
+    "message": "Expand"
+  },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Expanda o bloqueio de anúncios do Ghostery para mecanismos de pesquisa em algumas etapas fáceis."
   },
   "extensions": {
     "message": "Extensões",
     "description": "Tracker category name"
+  },
+  "for_all_websites": {
+    "message": "For all websites"
   },
   "for_more_information_read_our_full": {
     "message": "Para mais informações, leia a nossa versão completa"
@@ -274,6 +325,9 @@
   "learn_more_about_youtube_s_challenges_to_ad_blockers": {
     "message": "Saiba mais sobre os desafios do YouTube em relação aos bloqueadores de anúncios"
   },
+  "load_more": {
+    "message": "Load more"
+  },
   "manifest_name": {
     "message": "Ghostery Tracker & Ad Blocker - Privacidade AdBlock"
   },
@@ -290,8 +344,14 @@
     "message": "Miscelânea",
     "description": "Tracker category name"
   },
+  "modify_the_recommended_blocking_settings_for_every_website_": {
+    "message": "Modify the recommended blocking settings for every website."
+  },
   "more_ad_blocking_available": {
     "message": "Mais bloqueio de anúncios disponível"
+  },
+  "more_in_this_organization": {
+    "message": "More in this organization"
   },
   "my_account": {
     "message": "Minha conta"
@@ -302,14 +362,20 @@
   "never_consent": {
     "message": "Never-Consent"
   },
-  "no_trackers_detected": {
-    "message": "Nenhum rastreador detectado"
+  "no_activities_detected": {
+    "message": "No activities detected"
+  },
+  "no_websites_exceptions_added_yet": {
+    "message": "No websites exceptions added yet"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "Número de rastreadores com solicitações de rede bloqueadas."
   },
   "number_of_trackers_with_removed_cookies_or_fingerprints_": {
     "message": "Número de rastreadores com cookies ou impressões digitais removidos."
+  },
+  "observed_activities": {
+    "message": "Observed activities"
   },
   "off": {
     "message": "Desligado"
@@ -323,9 +389,21 @@
   "open_youtube_in_a_private_window": {
     "message": "Abrir o YouTube em uma janela privada"
   },
+  "organization": {
+    "message": "Organization"
+  },
+  "organization_s_website": {
+    "message": "Organization's website"
+  },
   "other": {
     "message": "Outro",
     "description": "Tracker category name"
+  },
+  "our_recommendation_for_this_activity__blocked": {
+    "message": "Our recommendation for this activity: Blocked"
+  },
+  "our_recommendation_for_this_activity__trusted": {
+    "message": "Our recommendation for this activity: Trusted"
   },
   "pause_on_this_site": {
     "message": "Pausar neste site"
@@ -357,6 +435,9 @@
   "privacy_protection": {
     "message": "Proteção de privacidade"
   },
+  "protection_status": {
+    "message": "Protection status"
+  },
   "read_more_on_whotracks_me": {
     "message": "Leia mais em WhoTracks.Me"
   },
@@ -375,6 +456,9 @@
   "resume": {
     "message": "Retomar"
   },
+  "save": {
+    "message": "Save"
+  },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "Salve e sincronize suas configurações personalizadas entre navegadores e dispositivos."
   },
@@ -384,6 +468,9 @@
   "search_website___": {
     "message": "Pesquisar site..."
   },
+  "set_blocking_preference": {
+    "message": "Set blocking preference"
+  },
   "settings": {
     "message": "Configurações"
   },
@@ -392,6 +479,9 @@
   },
   "setup_successful": {
     "message": "Configuração bem sucedida"
+  },
+  "show_all": {
+    "message": "Show all"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "Mostra a visualização do rastreador ao lado dos resultados da pesquisa."
@@ -426,14 +516,17 @@
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
   },
+  "tracker_database": {
+    "message": "Tracker database"
+  },
+  "trackers": {
+    "message": "Trackers"
+  },
   "trackers_blocked": {
     "message": "Rastreadores bloqueados"
   },
   "trackers_count": {
     "message": "Contagem de rastreadores"
-  },
-  "trackers_detected": {
-    "message": "Rastreadores detectados"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Rastreadores detectados pelo Ghostery neste site:&nbsp;$$$${0}"
@@ -446,6 +539,21 @@
   },
   "trackers_wheel": {
     "message": "Roda de rastreadores"
+  },
+  "trust_on_this_website": {
+    "message": "Trust on this website"
+  },
+  "trusted": {
+    "message": "Trusted"
+  },
+  "trusted__@_0_": {
+    "message": "Trusted: $${0}"
+  },
+  "trusted_on_all_websites": {
+    "message": "Trusted on all websites"
+  },
+  "trusted_on_this_website": {
+    "message": "Trusted on this website"
   },
   "unidentified": {
     "message": "Não identificado",
@@ -460,6 +568,12 @@
   "urls_observed": {
     "message": "URLs observados"
   },
+  "view_activity_details": {
+    "message": "View activity details"
+  },
+  "view_trackerdb_on_github": {
+    "message": "View trackerdb on GitHub"
+  },
   "visit_our_blog": {
     "message": "Visite nosso blog"
   },
@@ -471,6 +585,9 @@
   },
   "website": {
     "message": "Site"
+  },
+  "website_exceptions": {
+    "message": "Website exceptions"
   },
   "websites": {
     "message": "Sites"
